--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,8 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* Change this for controlling theme on page load - Default theme */
+@media (prefers-color-scheme: light) { 
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
